    to build once

2010-06-03 Version 0.3.10

  * updated to cv2pdb 0.13 which allows debugging under plain VS2010 and is
    more stable when evaluating arrays in the debugger
  * now built with debug symbols to allow crash analysis. See
    [downloads/visuald_pdb.zip] for symbols for the latest version
  * fix: project property dialog did not popup with saved D version
  * added the possibility to stop a build
  * new logo now used in about box

2010-06-10 Version 0.3.11

  * error messages now forwarded to error list
  * Visual D settings now stored in the user area of the registry
  * added library search path to project settings (you need to append ";%LIB%" to
    the LIB setting in DMD's sc.ini for this to work)
  * command VisualD.ShowScope now displays the scope of the caret in the 
    status line
  * Visual D now creates its own menu, expecting to be filled with more commands
    in the future and to avoid cluttering other menus
  * Search window commands are now called VisualD.SearchFile and VisualD.SearchSymbol
    (you might need to reassign keyboard shortcuts)
  * Thanks to Alix Pexton, the web site has a professional looking new logo. 

2010-06-25 Version 0.3.12

  * stricter string handling to avoid crashes when launching debugger in VS2010
  * the windows application template's substem version now defaults to 4.0
  * added new project item template for package creating both folder in project and 
    directory on disk
  * if a directory exists with the name of the folder, the default location
    of a new project item now defaults to this directory
  * renaming a file in the project renames it on disk aswell
  * improved build process, it should now be possible to compile Visual D following
    the instruction on http://www.dsource.org/projects/visuald/wiki/Build_from_source
  * updated to cv2pdb 0.14.

not released Version 0.3.13

  * renaming a file in the project did not ensure the project to be saved
  