@@ -111,6 +111,7 @@ class ProjectOptions
 	bool release;		// build release version
 	bool preservePaths;	// !=0 means don't strip path from source file
 	bool warnings;		// enable warnings
+	bool infowarnings;	// enable informational warnings
 	bool pic;		// generate position-independent-code for shared libs
 	bool cov;		// generate code coverage data
 	bool nofloat;		// code should not pull in floating point support
@@ -241,6 +242,8 @@ class ProjectOptions
 			cmd ~= " -op";
 		if(warnings)
 			cmd ~= " -w";
+		if(infowarnings)
+			cmd ~= " -wi";
 		if(cov)
 			cmd ~= " -cov";
 		if(nofloat)
@@ -421,6 +424,7 @@ class ProjectOptions
 		elem ~= new xml.Element("release", toElem(release));
 		elem ~= new xml.Element("preservePaths", toElem(preservePaths));
 		elem ~= new xml.Element("warnings", toElem(warnings));
+		elem ~= new xml.Element("infowarnings", toElem(infowarnings));
 		elem ~= new xml.Element("pic", toElem(pic));
 		elem ~= new xml.Element("cov", toElem(cov));
 		elem ~= new xml.Element("nofloat", toElem(nofloat));
@@ -526,6 +530,7 @@ class ProjectOptions
 		fromElem(elem, "release", release);
 		fromElem(elem, "preservePaths", preservePaths);
 		fromElem(elem, "warnings", warnings);
+		fromElem(elem, "infowarnings", infowarnings);
 		fromElem(elem, "pic", pic);
 		fromElem(elem, "cov", cov);
 		fromElem(elem, "nofloat", nofloat);
